--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name"         : "node-todo",
-  "version"      : "0.0.0",
-  "description"  : "Simple todo application.",
-  "main"         : "server.js",
-  "author"       : "Scotch",
-  "dependencies" : {
-    "angular"             : "^1.5.8",
-    "bootstrap-css-only"  : "^3.3.7",
-    "body-parser"         : "^1.4.3",
-    "compression"         : "^1.6.2",
-    "express"             : "^4.13.4",
-    "method-override"     : "^2.1.3",
-    "mongoose"            : "^4.4.19",
-    "morgan"              : "^1.1.1"
+  "name": "node-todo",
+  "version": "0.0.0",
+  "description": "Simple todo application.",
+  "main": "server.js",
+  "author": "Scotch",
+  "dependencies": {
+    "angular": "^1.5.8",
+    "bootstrap-css-only": "^3.3.7",
+    "body-parser": "^1.4.3",
+    "compression": "^1.6.2",
+    "express": "^4.13.4",
+    "method-override": "^2.1.3",
+    "mongoose": "^4.4.19",
+    "morgan": "^1.1.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4"
   }
 }
